--- a/app/src/main/res/layout/chart_main.xml
+++ b/app/src/main/res/layout/chart_main.xml
@@ -13,16 +13,6 @@
         android:layout_height="match_parent"
         tools:context=".CoinActivity">
 
-        <TextView
-            android:id="@+id/candlesTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UHLC_chart_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/weeklyCandlesToggle" />
-
         <ToggleButton
             android:id="@+id/weeklyCandlesToggle"
             android:layout_width="200dp"
@@ -34,6 +24,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.github.mikephil.charting.charts.CandleStickChart
+            android:id="@+id/candle_stick_chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="80dp"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
