Refactoring MainActivity and other services to handle the load/store policy

--- a/app/src/main/res/values/api-properties.xml
+++ b/app/src/main/res/values/api-properties.xml
@@ -7,6 +7,7 @@
     <string name="convert_key">convert</string>
     <string name="usd_val">USD</string>
     <string name="limit_key">limit</string>
-    <string name="fetch_limit">5</string>
+    <integer name="fetch_limit">5</integer>
     <string name="start_key">start</string>
+    <integer name="max_poll">20</integer>
 </resources>
