--- a/app/src/main/res/layout/coin_layout.xml
+++ b/app/src/main/res/layout/coin_layout.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150sp"
+        android:layout_height="130dp"
         android:background="@color/colorCoinBackground"
         >
 
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="230sp"
-            android:layout_marginTop="105sp"
+            android:layout_marginTop="90dp"
             android:text="$"
             android:textSize="25sp"
             app:fontFamily="@font/chakrapetchbold"
@@ -85,32 +85,34 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="255sp"
-            android:layout_marginTop="105sp"
+            android:layout_marginTop="90dp"
             android:text="USD"
             app:fontFamily="@font/josefinslabregular"
             android:textColor="@android:color/holo_orange_light"
-            android:textSize="35sp" />
+            android:textSize="30dp" />
 
         <!--CryptoCurrency 1hr Watch!-->
+
+
+        <!--CryptoCurrency Percentage 1hr% Change -->
+
         <TextView
             android:id="@+id/oneHourText"
             android:layout_width="80sp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="280sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="15sp"
             android:text="%1hr"
-            app:fontFamily="@font/poiretoneregular"
-            android:textSize="16sp"
-            android:textColor="@color/colorAccent"/>
+            android:textColor="@color/colorAccent"
+            android:textSize="12dp"
+            app:fontFamily="@font/poiretoneregular" />
 
-
-        <!--CryptoCurrency Percentage 1hr% Change -->
         <TextView
             android:id="@+id/percentChange1hText"
             android:layout_width="40sp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="230sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="15dp"
             android:text="%1hr"
             app:fontFamily="@font/josefinslabbold"
             android:textColor="@color/colorTransparentWhite"/>
@@ -124,8 +126,8 @@
             android:layout_marginBottom="32dp"
             android:text="%24hr"
             android:layout_marginLeft="280sp"
-            android:layout_marginTop="50sp"
-            android:textSize="16sp"
+            android:layout_marginTop="40dp"
+            android:textSize="12dp"
             app:fontFamily="@font/poiretoneregular"
             android:textColor="@color/colorAccent"/>
 
@@ -135,7 +137,7 @@
             android:id="@+id/percentChange24hText"
             android:layout_width="40sp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50sp"
+            android:layout_marginTop="40dp"
             android:layout_marginLeft="230sp"
             android:text="%24hr"
             app:fontFamily="@font/josefinslabbold"
@@ -149,8 +151,8 @@
             android:layout_height="wrap_content"
             android:text="%7d"
             android:layout_marginLeft="280sp"
-            android:layout_marginTop="80sp"
-            android:textSize="16sp"
+            android:layout_marginTop="65dp"
+            android:textSize="12dp"
             app:fontFamily="@font/poiretoneregular"
             android:textColor="@color/colorAccent"/>
 
@@ -164,7 +166,7 @@
             android:text="%7d"
             app:fontFamily="@font/josefinslabbold"
             android:textColor="@color/colorTransparentWhite"
-            android:layout_marginTop="80sp"/>
+            android:layout_marginTop="65dp"/>
 
         <View
             android:layout_width="match_parent"
