--- a/app/src/main/res/layout/coin_layout.xml
+++ b/app/src/main/res/layout/coin_layout.xml
@@ -66,20 +66,21 @@
             android:gravity="center_horizontal" />
 
         <!--CryptoCurrency Sign-->
+
+        <!--CryptoCurrency Price-->
         <TextView
             android:id="@+id/coin_sign"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="230sp"
-            android:layout_marginTop="90dp"
+            android:layout_marginTop="85dp"
+            android:gravity="center_horizontal"
             android:text="$"
-            android:textSize="25sp"
-            app:fontFamily="@font/chakrapetchbold"
             android:textAlignment="center"
             android:textColor="@color/colorTransparentWhite"
-            android:gravity="center_horizontal" />
+            android:textSize="25sp"
+            app:fontFamily="@font/chakrapetchbold" />
 
-        <!--CryptoCurrency Price-->
         <TextView
             android:id="@+id/priceUsdText"
             android:layout_width="wrap_content"
