--- a/app/src/main/res/values/api-properties.xml
+++ b/app/src/main/res/values/api-properties.xml
@@ -17,8 +17,12 @@
     <string name="candle_api">https://rest.coinapi.io/v1/ohlcv/</string>
     <string name="usd_history_uri">/USD/history</string>
     <string name="chart_api_key">X-CoinAPI-Key</string>
-    <string name="chart_api_key_value">7DA58282-197D-42AC-B096-AF5A99EEE083</string>
+    <string name="chart_api_key_value">022A4026-E66A-4153-AAB7-DE35A24309CC</string>
     <string name="period_key">period_id</string>
     <string name="period_val">1DAY</string>
     <string name="time_start_key">time_start</string>
+
+    <!--> Coin Icons <!-->
+    <string name="icons_api">https://s2.coinmarketcap.com/static/img/coins/64x64/</string>
+    <string name="png_format">.png</string>
 </resources>
